New Crowdin updates (#12796)
* New translations: site.xml (Spanish)

* New translations: contact.xml (Spanish)

* New translations: site.xml (Lithuanian)

* New translations: contact.xml (Lithuanian)

* New translations: site.xml (Portuguese)

* New translations: contact.xml (Portuguese)

* New translations: site.xml (Albanian)

* New translations: contact.xml (Albanian)

* New translations: site.xml (Portuguese, Brazilian)

* New translations: contact.xml (Portuguese, Brazilian)

* New translations: site.xml (Persian)

* New translations: contact.xml (Persian)

* New translations: streamer.xml (Lithuanian)

* New translations: site.xml (Italian)

* New translations: contact.xml (Italian)

* New translations: site.xml (Norwegian Nynorsk)

* New translations: contact.xml (Norwegian Nynorsk)

* New translations: site.xml (French)

* New translations: contact.xml (French)

* New translations: site.xml (Polish)

* New translations: contact.xml (Polish)

* New translations: site.xml (Slovenian)

* New translations: contact.xml (Slovenian)

* New translations: site.xml (Galician)

* New translations: contact.xml (Galician)

* New translations: site.xml (Spanish)

* New translations: contact.xml (Spanish)

* New translations: site.xml (Bulgarian)

* New translations: contact.xml (Bulgarian)

* New translations: site.xml (Dutch)

* New translations: contact.xml (Dutch)

* New translations: site.xml (Polish)

* New translations: site.xml (Norwegian Bokmal)

* New translations: contact.xml (Norwegian Bokmal)

* New translations: site.xml (Russian)

* New translations: contact.xml (Russian)

* New translations: swiss.xml (Galician)

* New translations: site.xml (Avaric)

* New translations: site.xml (Slovak)

* New translations: contact.xml (Slovak)

* New translations: site.xml (Avaric)

* New translations: site.xml (Avaric)

* New translations: site.xml (French)

* New translations: site.xm

--- a/translation/dest/site/tp-TP.xml
+++ b/translation/dest/site/tp-TP.xml
@@ -367,6 +367,7 @@ o musi lon lipu pona. sina wile ala pana e nimi li wile ala e ilo. sitelen esun 
   <string name="apply">kama lon</string>
   <string name="save">awen</string>
   <string name="leaderboard">jan pi pona mute</string>
+  <string name="gameAsGIF">musi kepeken lipu kama</string>
   <string name="pasteTheFenStringHere">o pana e nimi FEN lon ni</string>
   <string name="pasteThePgnStringHere">o pana e nimi PGN lon ni</string>
   <string name="orUploadPgnFile">ante la, sina ken pana e lipu PGN</string>
@@ -644,6 +645,7 @@ o musi lon lipu pona. sina wile ala pana e nimi li wile ala e ilo. sitelen esun 
   <string name="tournamentFAQ">wile sona pi jan mute pi utala musi</string>
   <string name="timeBeforeTournamentStarts">tenpo open pi utala musi li kama lon</string>
   <string name="averageCentipawnLoss">nanpa insa CPL</string>
+  <string name="accuracy">wawa</string>
   <string name="keyboardShortcuts">lipu pi pali ale pi ilo nena</string>
   <string name="keyMoveBackwardOrForward">o tawa sinpin/monsi</string>
   <string name="keyGoToStartOrEnd">o tawa open/pini</string>
@@ -839,6 +841,8 @@ sina wile e ni la, o pali e tawa ken pi jan musi tu.</string>
   <string name="useTheReportForm">o toki kepeken lipu ni</string>
   <string name="toRequestSupport">sina wile toki tawa mi mute pi ilo Lichess la, %1$s</string>
   <string name="tryTheContactPage">o toki kepeken lipu \"toki tawa mi mute\"</string>
+  <string name="makeSureToRead" comment="makeSureToRead&#10;&#10;%1$s is 'the forum etiquette'.">o lukin e %1$s</string>
+  <string name="theForumEtiquette" comment="theForumEtiquette&#10;&#10;Part of string 'Make sure to read [the forum etiquette]'">nasin pi ma toki</string>
   <string name="thisTopicIsArchived">toki ni li awen. jan li ken ala toki lon ona lon tenpo ni.</string>
   <string name="joinTheTeamXToPost">sina wile toki lon tomo toki ni la, o kama tawa kulupu \"%1$s\"</string>
   <string name="teamNamedX">kulupu %1$s</string>
