New Crowdin updates (#12870)
* New translations: contact.xml (Arabic)

* New translations: streamer.xml (Arabic)

* New translations: site.xml (Japanese)

* New translations: site.xml (Irish)

* New translations: site.xml (Breton)

* New translations: streamer.xml (Breton)

* New translations: puzzle.xml (Breton)

* New translations: site.xml (Breton)

* New translations: site.xml (Avaric)

* New translations: site.xml (Avaric)

* New translations: site.xml (Slovak)

* New translations: site.xml (Avaric)

* New translations: activity.xml (Slovak)

* New translations: swiss.xml (Slovak)

* New translations: site.xml (Avaric)

* New translations: site.xml (Avaric)

* New translations: site.xml (Turkish)

* New translations: site.xml (Finnish)

* New translations: site.xml (Breton)

* New translations: site.xml (Breton)

* New translations: keyboardMove.xml (Breton)

* New translations: site.xml (Norwegian Bokmal)

* New translations: site.xml (Slovak)

* New translations: site.xml (French)

* New translations: puzzleTheme.xml (Russian)

* New translations: site.xml (Ukrainian)

--- a/translation/dest/site/br-FR.xml
+++ b/translation/dest/site/br-FR.xml
@@ -242,6 +242,9 @@
   <string name="proceedToX">Kuitaat war-zu %s</string>
   <string name="passwordSuggestion">Na choazit ket ur ger-kuzh bet silet e pleg ho skouarn gant unan all. Arveriet e vo evit laerezh ho kont diganeoc\'h.</string>
   <string name="emailSuggestion">Na choazit ket ur chomlec\'h postel bet aliet deoc\'h gant unan all. Arveriet e vo evit laerezh ho kont diganeoc\'h.</string>
+  <string name="emailConfirmHelp">Un tamm sikour evit ar postel kadarnaat</string>
+  <string name="whatSignupUsername">Petra oa hoc\'h anv-implijer da vare hoc\'h enskrivadur?</string>
+  <string name="usernameNotFound">N\'omp ket deuet a-benn da gavout ur c\'hoarier anvet: %s.</string>
   <string name="usernameCanBeUsedForNewAccount">Gallout a rit ober gant an anv implijer-mañ evit krouiñ ur gont nevez</string>
   <string name="emailSent">Kaset hon eus ur postel da %s.</string>
   <string name="emailCanTakeSomeTime">Marteze ne vo ket resevet diouzhtu-dak.</string>
@@ -249,7 +252,9 @@
   <string name="checkSpamFolder">Taolit ur sell en ho strobelloù e ken kas. Ma c\'hoarvez seul taol ganeoc\'h e vo dav resisaat n\'eo ket ur strobell.</string>
   <string name="emailForSignupHelp">Kasit deomp ar postel-mañ ma n\'oc\'h ket deuet a-benn:</string>
   <string name="copyTextToEmail">Eilit ha pegit an destennig ha kasit anezhi da %s</string>
+  <string name="accountConfirmed">Kadarnaet eo bet krouidigezh ar c\'hoarier %s.</string>
   <string name="accountCanLogin">Gallout a rit kevreañ dindan an anv %s.</string>
+  <string name="accountConfirmationEmailNotNeeded">N\'ho peus ket ezhomm deus ur postel-kadarnaat.</string>
   <string name="accountClosed">Serr eo ar gont %s.</string>
   <string name="rank">Renk</string>
   <string name="rankX">Renk: %s</string>
@@ -361,9 +366,9 @@
   <plurals name="giveNbSeconds">
     <item quantity="one">Reiñ %s eilenn</item>
     <item quantity="two">Reiñ %s eilenn</item>
-    <item quantity="few">Reiñ %s eilennoù</item>
-    <item quantity="many">Reiñ %s eilennoù</item>
-    <item quantity="other">Reiñ %s eilennoù</item>
+    <item quantity="few">Reiñ %s eilenn</item>
+    <item quantity="many">Reiñ %s eilenn</item>
+    <item quantity="other">Reiñ %s eilenn</item>
   </plurals>
   <string name="thisAccountViolatedTos">Perc\'henner ar gont-mañ n\'en deus ket doujet da Reolennoù Lichess</string>
   <string name="openingExplorerAndTablebase">Furcher an digoradurioù &amp; tablebase</string>
@@ -627,7 +632,7 @@
   <string name="typePrivateNotesHere">Bizskrivañ notennoù prevez amañ</string>
   <string name="writeAPrivateNoteAboutThisUser">Skrivañ un notenn brevez diwar-benn ar c\'hoarier-mañ</string>
   <string name="noNoteYet">Notenn ebet evit poent</string>
-  <string name="invalidUsernameOrPassword">N\'eo ket mat an an anv-implijer pe ar ger-tremen</string>
+  <string name="invalidUsernameOrPassword">N\'eo ket mat an anv-implijer pe ar ger-tremen-mañ</string>
   <string name="incorrectPassword">N\'eo ket mat ar ger-kuzh</string>
   <string name="invalidAuthenticationCode">Kod dilesadur fall</string>
   <string name="emailMeALink">Kasit din ul liamm dre bostel</string>
@@ -699,6 +704,8 @@
   <string name="error.min">A rank bezañ %s da nebeutañ</string>
   <string name="error.max">A rank bezañ %s da vuiañ</string>
   <string name="ifRatingIsPlusMinusX">Ma \'z eo ar renkadur ± %s</string>
+  <string name="ifRegistered">Enskrivet hepken</string>
+  <string name="onlyExistingConversations">Kaozeadennoù o ren hepken</string>
   <string name="onlyFriends">Mignoned hepken</string>
   <string name="menu">Lañser</string>
   <string name="castling">Rokañ</string>
@@ -956,6 +963,8 @@
   <string name="useTheReportForm">grit gant ar furmskrid diskleriañ</string>
   <string name="toRequestSupport">Evit bezañ sikouret %1$s</string>
   <string name="tryTheContactPage">klaskit war ar bajenn mont e darempred</string>
+  <string name="makeSureToRead">Lennit %1$s mar plij ganeoc\'h</string>
+  <string name="theForumEtiquette">reolennoù ar forom</string>
   <string name="thisTopicIsArchived">Diellaouet eo bet ar sujed-mañ ha ne c\'haller ket respont ken.</string>
   <string name="joinTheTeamXToPost">Ret eo bezañ ezel eus %1$s evit skrivañ ur gemennadenn er forom-mañ</string>
   <string name="teamNamedX">Skipailh %1$s</string>
@@ -980,7 +989,10 @@
   <string name="cancelTournament">Nullañ an tournamant</string>
   <string name="tournDescription">Ur gerig diwar-benn an tournamant</string>
   <string name="tournDescriptionHelp">Un dra bennak a fell deoc\'h lâret d\'ar re a gemero perzh? E berr gomzoù mar plij. Liammoù Markdown zo: [name](https://url)</string>
+  <string name="ratedFormHelp">Renket eo ar c\'hrogadoù ha cheñch a reont renkadur ar c\'hoarierien</string>
   <string name="onlyMembersOfTeam">Izili ar skipailh hepken</string>
+  <string name="noRestriction">Harz ebet</string>
+  <string name="minimumRating">Renkadur bihanañ</string>
   <string name="onlyTitled">C\'hoarierien titlet hepken</string>
   <string name="simulHostcolor">Liv an ostiz evit pep krogad</string>
   <string name="simulDescriptionHelp">Un dra bennak da lâret d\'ar re a gemero perzh?</string>
@@ -1007,4 +1019,5 @@
   <string name="lichessDbExplanation">Krogadoù renket c\'hoariet war Lichess</string>
   <string name="switchSides">Cheñch tu</string>
   <string name="closingAccountWithdrawAppeal">Nullet e vo hoc\'h engalv ma serrit ho kont</string>
+  <string name="ourEventTips">Alioù fur a-raok aozañ abadennoù</string>
 </resources>
