Translate and pluralise mini-user rating title
close https://github.com/lichess-org/lila/issues/12878

--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -152,6 +152,10 @@
     <item quantity="one">%s game</item>
     <item quantity="other">%s games</item>
   </plurals>
+  <plurals name="ratingXOverYGames">
+    <item quantity="one">%1$s rating over %2$s game</item>
+    <item quantity="other">%1$s rating over %2$s games</item>
+  </plurals>
   <plurals name="nbBookmarks">
     <item quantity="one">%s bookmark</item>
     <item quantity="other">%s bookmarks</item>
