New Crowdin updates (#12881)
* New translations: site.xml (Portuguese, Brazilian)

* New translations: site.xml (Danish)

* New translations: site.xml (German)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Persian)

* New translations: site.xml (Norwegian Nynorsk)

* New translations: site.xml (Catalan)

* New translations: site.xml (Danish)

* New translations: site.xml (German)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Italian)

* New translations: site.xml (Lithuanian)

* New translations: site.xml (Russian)

* New translations: contact.xml (Danish)

* New translations: faq.xml (Danish)

* New translations: oauthScope.xml (Danish)

* New translations: site.xml (Armenian)

* New translations: site.xml (Dutch)

* New translations: site.xml (Albanian)

* New translations: site.xml (Galician)

* New translations: arena.xml (Armenian)

* New translations: activity.xml (Armenian)

* New translations: site.xml (French)

* New translations: site.xml (Persian)

* New translations: site.xml (Afrikaans)

* New translations: site.xml (Dutch)

--- a/translation/dest/site/he-IL.xml
+++ b/translation/dest/site/he-IL.xml
@@ -124,6 +124,7 @@
   <string name="memory">זיכרון</string>
   <string name="infiniteAnalysis">ניתוח אינסופי</string>
   <string name="removesTheDepthLimit">מסיר את מגבלת העומק ו\"מחמם\" את המחשב</string>
+  <string name="engineManager">מנהל המנועים</string>
   <string name="blunder">טעות גסה</string>
   <string name="mistake">שגיאה</string>
   <string name="inaccuracy">אי־דיוק</string>
@@ -165,6 +166,12 @@
     <item quantity="two">%s משחקים</item>
     <item quantity="many">%s משחקים</item>
     <item quantity="other">%s משחקים</item>
+  </plurals>
+  <plurals name="ratingXOverYGames">
+    <item quantity="one">דירוג של %1$s לאורך משחק %2$s</item>
+    <item quantity="two">דירוג של %1$s לאורך %2$s משחקים</item>
+    <item quantity="many">דירוג של %1$s לאורך %2$s משחקים</item>
+    <item quantity="other">דירוג של %1$s לאורך %2$s משחקים</item>
   </plurals>
   <plurals name="nbBookmarks">
     <item quantity="one">%s מועדפים</item>
