--- a/translation/dest/site/de-DE.xml
+++ b/translation/dest/site/de-DE.xml
@@ -120,6 +120,7 @@
   <string name="memory">Arbeitsspeicher</string>
   <string name="infiniteAnalysis">Endlose Analyse</string>
   <string name="removesTheDepthLimit">Entfernt die Tiefenbegrenzung und hält deinen Computer warm</string>
+  <string name="engineManager">Engineverwaltung</string>
   <string name="blunder">Grober Patzer</string>
   <string name="mistake">Fehler</string>
   <string name="inaccuracy">Ungenauigkeit</string>
@@ -151,6 +152,10 @@
   <plurals name="nbGames">
     <item quantity="one">%s Partie</item>
     <item quantity="other">%s Partien</item>
+  </plurals>
+  <plurals name="ratingXOverYGames">
+    <item quantity="one">%1$s Wertung aus %2$s Partie</item>
+    <item quantity="other">%1$s Wertung aus %2$s Partien</item>
   </plurals>
   <plurals name="nbBookmarks">
     <item quantity="one">%s Lesezeichen</item>
