--- a/translation/dest/site/fa-IR.xml
+++ b/translation/dest/site/fa-IR.xml
@@ -120,6 +120,7 @@
   <string name="memory">حافظه</string>
   <string name="infiniteAnalysis">آنالیز بی پایان</string>
   <string name="removesTheDepthLimit">محدودیت عمق بررسی را بر می دارد که به گرم شدن کامپیوتر شما منجر می شود</string>
+  <string name="engineManager">مدیر موتور شطرنج</string>
   <string name="blunder">اشتباه فاحش</string>
   <string name="mistake">اشتباه</string>
   <string name="inaccuracy">بی دقتی</string>
@@ -151,6 +152,10 @@
   <plurals name="nbGames">
     <item quantity="one">%s بازی</item>
     <item quantity="other">%s بازی</item>
+  </plurals>
+  <plurals name="ratingXOverYGames">
+    <item quantity="one">%1$s ریتینگ در %2$s بازی</item>
+    <item quantity="other">%1$s ریتینگ در %2$s بازی</item>
   </plurals>
   <plurals name="nbBookmarks">
     <item quantity="one">%s بازی مورد علاقه</item>
